ensure logo shows on error pages on mobile layout.

--- a/src/css/responsive.less
+++ b/src/css/responsive.less
@@ -76,7 +76,11 @@
 
         .brand {
             display: none;
-            body.section-servers & {
+            body.section-servers &,
+            body:not(.section-databases) &,
+            body:not(.section-collections) &,
+            body:not(.section-documents) &,
+            body:not(.section-document) & {
                 display: block;
                 text-align: center;
                 float: none;
